# ade-workbench

./: .gitignore  ADE_Windows_Program_Framework.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ADR-001_IMPLEMENTATION_BASELINE.md  HANDOFF_TO_OPENCODE.md  UI_DESIGN.md
scripts/: build-sidecar.mjs  test_ab1_parser.mjs  test_dna_parser.mjs
server/: Cargo.toml  _tmp_test_html_to_docx.cjs
server/scripts/: doc-format-convert.cjs  html-to-docx.cjs  powerpoint-editor.cjs  powerpoint-editor.ps1  powerpoint-format-convert.vbs  powerpoint-preview-export.cjs  powerpoint-preview-export.vbs  pptx-media-convert.cjs  rasterize-office-image.ps1  word-format-convert.vbs
server/src/: ade_journal.rs  agents.rs  main.rs  model.rs  persistence.rs  project_files.rs  snapshots.rs
src/: App.tsx  main.tsx  pptx-preview.d.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agents.rs  lib.rs  main.rs  model.rs  persistence.rs  project_files.rs  snapshots.rs
src/components/: ActivityFeed.tsx  AgentTerminal.tsx  AnnotationPanel.tsx  FileViewer.tsx  FolderPicker.tsx  Landing.tsx  ProjectFileTree.tsx  ProjectSidebar.tsx  SettingsPanel.tsx
src/components/viewers/: Ab1View.tsx  CodeEditor.tsx  DnaView.tsx  DocxView.tsx  MarkdownView.tsx  PdfView.tsx  PptxView.tsx  SequenceView.tsx  SpreadsheetView.tsx  TabularView.tsx  TiffView.tsx  TreeView.tsx  ab1.ts  dna.ts  shared.tsx
src/lib/: bridge.ts  docxReview.ts  preferences.ts  tiff.ts  useResizableSidebar.ts
src/types/: domain.ts
