[package]
name = "ade-server"
version = "0.1.0"
description = "Agentic Document Environment - local web backend"
edition = "2021"

[[bin]]
name = "ade-server"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
axum = "0.7"
base64 = "0.22.1"
dirs = "5"
open = "5"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }