[package]
name = "ade-workbench"
version = "0.1.0"
description = "Agentic Document Environment for Windows"
authors = ["ADE Contributors"]
edition = "2021"

[lib]
name = "ade_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
open = "5"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
