[package]
name = "ade-workbench"
version = "0.1.0"
description = "Agentic Document Environment for Windows"
authors = ["ADE Contributors"]
edition = "2021"

[lib]
name = "ade_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
